<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, LoginActivity!</string>
    <string name="app_name">Blackbird</string>
    <string name="login_btn">Login with Google account</string>
    <string name="login_welcome">Welcome to BlackBird</string>
    <string name="booklist_title">Books:</string>
    <string name="booklist_addbook">Add book</string>
    <string name="booklist_refresh">Refresh</string>
    <string name="upload_booktitle">Title:</string>
    <string name="upload_filepath">File:</string>
    <string name="upload_ok">OK</string>
    <string name="upload_cancel">Cancel</string>
    <string name="read_prev">Prev</string>
    <string name="read_next">Next</string>
    <string name="read_jump">Jump to</string>

</resources>